--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student | Teacher | Student Management System</title>
+    <title>Student | Teacher | AUST Management System</title>
     <link rel="stylesheet" href="CSS/admin.css">
 </head>
 
