--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,7 @@
         <span class="borderline"></span>
         <div class="container">
 
-            <h2>Student Management System</h2>
+            <h2>AUST Management System</h2>
             <i></i>
             <div class="inputbox">
                 <a href="LoginStudent.html"><img src="CSS/images/student.png" alt=""></a>
