--- a/teacher.html
+++ b/teacher.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teacher Login From</title>
+    <title>Teacher Signup From</title>
     <link rel="stylesheet" href="CSS/teacher.css">
 </head>
 
